fixed modal on small devices 1.2

--- a/src/index.css
+++ b/src/index.css
@@ -568,7 +568,7 @@ footer {
   position:fixed;
   background: white;
   border-radius: 10px;
-  z-index: 2;
+  z-index: 3;
   width: 60%;
   height: auto;
   top:50%;
